--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -4,8 +4,8 @@
 		<title>AirBnB_Clone</title>
 	</head>
 		<body>
-			<header style="color: #FF0000; height: 70px; width: 100%;"></header>
-			<footer style="color: #00FF00; height: 60px; width: 100%; position: absolute; text-align: center; bottom: 0; line-height: 60px;">
+			<header style="background-color: #FF0000; height: 70px; width: 100%;"></header>
+			<footer style="background-color: #00FF00; height: 60px; width: 100%; position: absolute; text-align: center; bottom: 0; line-height: 60px;">
 				Best School
 			</footer>
 		</body>
