Task 1: Basic HTML Document Structure with styling in the <head> tag using the style tag to apply css styles

--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -5,7 +5,6 @@
     <title>Airbnb</title>
     <style>
       header {background-color:#FF0000; height:70px; width:100%;}
-      body {margin:0; padding:0;}
       footer {background-color:#00FF00; height:60px; width:100%; position:absolute; bottom:0; text-align:center; line-height:60px;}
     </style>
   </head>
@@ -13,7 +12,7 @@
     <header>
     </header>
     <footer>
-      Holberton School
+      Best School
     </footer>
   </body>
 </html>
